# ThetisLink

./: .gitignore  ATTRIBUTION.md  Cargo.toml  Credits.md  Installatie.md  Installation.md  LICENSE  LICENSE-COMMERCIAL.md  NOTICE.md  README.md  Technical-Reference.md  Technische-Referentie.md  User-Manual-EN.md  User-Manual.md  about.toml
.cargo/: config.toml
.github/workflows/: guard.yml
compliance/: THIRD-PARTY-LICENSES.html  sbom.spdx.json
docs/: ARCHITECTURE.md  ARCHITECTUUR.md  IMPLEMENTATIE.md  IMPLEMENTATION.md  PTT-TIMING.md  TCI-Protocol.md  UI-EN.md  UI.md  User-Manual-EN.md  User-Manual.md  architecture.html  ctun-ddc-analyse.md  latency-tuning-baseline.md  mermaid-editor.html  protocol2-spectrum.md  stockcorner-tuner-serial-interface.md  tci-missing-commands.md
docs-book/src/: SUMMARY.md
docs/archief-v0.5.0-pre/: ARCHITECTURE.md  ARCHITECTUUR.md  DOCUMENTATIE.md  FASEPLAN.md  IMPLEMENTATIE.md  IMPLEMENTATION.md  INSTALLATIE.md  PTT-TIMING.md  REFACTORING-PLAN.md  UI-EN.md  UI.md  USER-MANUAL.md  tci-missing-commands.md
docs/referentie/: FT‑991A CAT exacte commando’s om een geheugen‑kanaalnaam te lezen en te schrijven.md  Thetis-CAT-Command-Reference-Guide-V3.md  Yaesu FT‑991A CAT‑commando’s (complete set) — structuur, transport en praktisch gebruik.md  Yaesu FT‑991A alle 153 EX‑menuparameters uitlezen en wijzigen via CAT.md
sdr-remote-android/: Cargo.toml  build.rs
sdr-remote-android/android/: .gitignore  INSTALLATIE.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
sdr-remote-android/android/app/: build.gradle.kts
sdr-remote-android/android/app/src/main/: AndroidManifest.xml
sdr-remote-android/android/app/src/main/java/com/sdrremote/: MainActivity.kt  SdrUiState.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/service/: AudioRouting.kt  AudioService.kt  MidiController.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/ui/components/: ConnectionPanel.kt  FrequencyDisplay.kt  MidiSettingsDialog.kt  PttButton.kt  RadioControls.kt  SettingsDialog.kt  SpectrumView.kt  StatsPanel.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/ui/screens/: ExternalDevicesScreen.kt  MainScreen.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/ui/theme/: Theme.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/viewmodel/: SdrViewModel.kt
sdr-remote-android/android/app/src/main/java/uniffi/sdr_remote/: sdr_remote.kt
sdr-remote-android/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
sdr-remote-android/android/app/src/main/res/values/: strings.xml  themes.xml
sdr-remote-android/cmake/: android-arm64.cmake
sdr-remote-android/src/: audio_oboe.rs  bridge.rs  lib.rs  sdr_remote.udl
sdr-remote-client/: Cargo.toml  build.rs
sdr-remote-client/src/: audio.rs  catsync.rs  main.rs  midi.rs  websdr.rs
sdr-remote-client/src/ui/: config.rs  devices.rs  helpers.rs  meters.rs  mod.rs  screens.rs  spectrum.rs  yaesu_memory.rs  yaesu_menu.rs
sdr-remote-client/src/ui/controls/: band.rs  context.rs  coverage.rs  events.rs  frequency.rs  mod.rs  mode.rs  state.rs
sdr-remote-core/: Cargo.toml
sdr-remote-core/src/: auth.rs  codec.rs  jitter.rs  lib.rs  protocol.rs
sdr-remote-logic/: Cargo.toml
sdr-remote-logic/src/: audio.rs  commands.rs  engine.rs  eq.rs  lib.rs  state.rs  wav.rs
sdr-remote-server/: Cargo.toml  build.rs
sdr-remote-server/src/: amplitec.rs  audio_loops.rs  cat.rs  config.rs  dxcluster.rs  macros.rs  main.rs  network.rs  ptt.rs  rf2k.rs  rotor.rs  session.rs  spe_expert.rs  spectrum.rs  tci.rs  tci_commands.rs  tci_parser.rs  tuner.rs  ultrabeam.rs  yaesu.rs
sdr-remote-server/src/ui/: amplitec.rs  macros_ui.rs  mod.rs  rf2k.rs  rotor.rs  spe.rs  tuner.rs  ultrabeam.rs  utils.rs
