[package]
name = "sdr-remote-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ThetisLink-Client"
path = "src/main.rs"

[dependencies]
sdr-remote-core = { path = "../sdr-remote-core" }
sdr-remote-logic = { path = "../sdr-remote-logic" }
tokio = { workspace = true }
cpal = { workspace = true }
ringbuf = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
midir = { workspace = true }
open = "5"
chrono = "0.4"

wry = "0.54"
tao = "0.34"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
