[package]
name = "sdr-remote-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ThetisLink-Server"
path = "src/main.rs"

[dependencies]
sdr-remote-core = { path = "../sdr-remote-core" }
tokio = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }
ringbuf = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
qrcode = "0.14"
bytemuck = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
rustfft = "6"
socket2 = "0.5"
serialport = { workspace = true }
chrono = "0.4"
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"
url = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winresource = "0.1"
